--- a/Public/styles/signupPage.css
+++ b/Public/styles/signupPage.css
@@ -24,14 +24,15 @@ body{
 
 .page_title{
     display: block;
-    margin: 2px;
+    margin:  2px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     left: 30%;
 }
 
 .underline{
-    margin: 0;
+    margin-bottom: 10px ;
+    margin-top: 0px;
     width: 30%;
     height: 1px;
     background-color: aqua;
@@ -42,7 +43,7 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 40px;
+    top: 65px;
     height: 150px;
     justify-content: center;
     align-items: center;
